--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
                     </a>
                 </li>
             </ul>
-            
-            <a class="btn btn-bd-download d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="#">Feedback</a>
         </header>
         <div class="biosight_container">
             <div class="query_section">
@@ -138,6 +136,7 @@
                         <div class="row>">
                             <button type="button" class="btn btn-primary action">Search</button>
                             <button type="button" class="btn btn-primary action">Clear All</button>
+                            <button type="button" class="btn btn-primary action">Feedback</button>
                             <button type="button" class="btn btn-primary action">Export</button>
                         </div>  
                     </div>
