--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3">
                                 <label class="form-check-label" for="exampleRadios3">
-                                Dectections
+                                Detections
                                 </label>
                             </div>
                             <div class="form-check">
