--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <body>
         <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar">
             <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap">
-                COVID-19 Search Scholar
+                CovidScholar
             </a>
             
             <div class="navbar-nav-scroll">
