Added suggestion links

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
                         <div class="row">
                             <p>List of popular searches</p>
                             <ul>
-                                <li>Considerations for COVID-19 vaccine construction</li>
-                                <li>Predicting COVID-19 epidemic risk</li>
-                                <li>Similarity of coronavirus genome sequence</li>
+                                <li><a href="#">Considerations for COVID-19 vaccine construction</a></li>
+                                <li><a href="#">Predicting COVID-19 epidemic risk</a>/li>
+                                <li><a href="#">Similarity of coronavirus genome sequence</a></li>
                             </ul>
                             <p>Works in news collection only</p>
                             <ul>
-                                <li>COVID-19 PCR tests</li>
-                                <li>Development of COVID-19 attenuated virus vaccine</li>
-                                <li>Development of COVID-19 non-replicating viral vector vaccine</li>
+                                <li><a href="#">COVID-19 PCR tests</a></li>
+                                <li><a href="#">evelopment of COVID-19 attenuated virus vaccine</a></li>
+                                <li><a href="#">Development of COVID-19 non-replicating viral vector vaccine</a></li>
                             </ul>
                             <p>
                                 Brief reminder for the boolean operations and their symbols<br/>
