Added suggestion links

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <p>List of popular searches</p>
                             <ul>
                                 <li><a href="#">Considerations for COVID-19 vaccine construction</a></li>
-                                <li><a href="#">Predicting COVID-19 epidemic risk</a>/li>
+                                <li><a href="#">Predicting COVID-19 epidemic risk</a></li>
                                 <li><a href="#">Similarity of coronavirus genome sequence</a></li>
                             </ul>
                             <p>Works in news collection only</p>
